--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
       "url": "http://opensource.org/licenses/MIT"
     }
   ],
-  "main": "./index.js",
+  "main": "./app",
   "devDependencies": {
     "make-node": "^0.3.0",
     "mocha": "^2.0.0",
