--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@authnomicon/aaa-oauth2-iframe",
+  "name": "@authnomicon/aaa-oauth2-idpiframe",
   "version": "0.0.0",
   "description": "",
   "author": {
@@ -9,10 +9,10 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/authnomicon/aaa-oauth2-iframe.git"
+    "url": "git://github.com/authnomicon/aaa-oauth2-idpiframe.git"
   },
   "bugs": {
-    "url": "http://github.com/authnomicon/aaa-oauth2-iframe/issues"
+    "url": "http://github.com/authnomicon/aaa-oauth2-idpiframe/issues"
   },
   "license": "MIT",
   "licenses": [
@@ -22,6 +22,13 @@
     }
   ],
   "main": "./app",
+  "assembly": {
+    "namespace": "oauth2/idpiframe",
+    "components": [
+      "ext/modes/iframerpc",
+      "implicit/permission"
+    ]
+  },
   "dependencies": {
     "express": "^4.15.2",
     "serve-static": "^1.12.1"
