--- a/package.json
+++ b/package.json
@@ -35,6 +35,9 @@
       "implicit/permission"
     ]
   },
+  "directories": {
+    "com": "com"
+  },
   "dependencies": {
     "express": "^4.15.2",
     "serve-static": "^1.12.1"
