--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   "assembly": {
     "namespace": "org.authnomicon/oauth2/idpiframe",
     "components": [
-      
+      "iframe/http/service"
     ],
     "x_components": [
       "http/iframe",
@@ -42,8 +42,7 @@
     "com": "com"
   },
   "dependencies": {
-    "express": "^4.15.2",
-    "serve-static": "^1.12.1"
+    "express": "^4.17.1"
   },
   "devDependencies": {
     "make-node": "^0.3.0",
