--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "com": "com"
   },
   "dependencies": {
+    "array-flatten": "^1.1.1",
     "express": "^4.17.1"
   },
   "devDependencies": {
