--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "assembly": {
     "namespace": "org.authnomicon/oauth2/idpiframe",
     "components": [
+      "oauth2/authorize/http/response/types/permission",
       "oauth2/authorize/http/response/modes/iframerpc",
       "iframe/http/service",
       "rpc/http/service"
@@ -52,6 +53,7 @@
     "chai-express-handler": "^0.1.1",
     "make-node": "^0.3.0",
     "mocha": "^2.0.0",
+    "proxyquire": "^2.1.3",
     "sinon": "^12.0.1",
     "sinon-chai": "^3.7.0"
   },
