Add support for verifying storagerelay scheme.

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "namespace": "org.authnomicon/oauth2/idpiframe",
     "components": [
       "oauth2/authorize/http/response/types/permission",
+      "oauth2/authorize/http/response/schemes/storagerelay",
       "oauth2/authorize/http/response/modes/iframerpc",
       "iframe/http/service",
       "rpc/http/service"
