Inject LoginHintService by interface name.

--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
       "oauth2/authorize/http/response/schemes/storagerelay",
       "oauth2/authorize/http/response/modes/iframerpc",
       "iframe/http/service",
-      "rpc/http/service"
+      "rpc/http/service",
+      "id/loginhint/default"
     ],
     "x_components": [
       "http/iframe",
