Move files around.

--- a/package.json
+++ b/package.json
@@ -29,12 +29,12 @@
   "assembly": {
     "namespace": "org.authnomicon/oauth2/idpiframe",
     "components": [
+      "loginhintservice",
       "oauth2/authorize/http/response/types/permission",
       "oauth2/authorize/http/response/schemes/storagerelay",
       "oauth2/authorize/http/response/modes/iframerpc",
       "iframe/http/service",
-      "rpc/http/service",
-      "id/loginhint/default"
+      "rpc/http/service"
     ],
     "x_components": [
       "http/iframe",
