--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "namespace": "org.authnomicon/oauth2/idpiframe",
     "components": [
       "loginhintservice",
+      "oauth2/authorize/http/request/idpiframe",
       "oauth2/authorize/http/response/types/permission",
       "oauth2/authorize/http/response/schemes/storagerelay",
       "oauth2/authorize/http/response/modes/iframerpc",
