--- a/package.json
+++ b/package.json
@@ -30,9 +30,9 @@
     "namespace": "org.authnomicon/oauth2/idpiframe",
     "components": [
       "loginhintservice",
-      "oauth2/authorize/http/request/idpiframe",
-      "oauth2/authorize/http/response/types/permission",
-      "oauth2/authorize/http/response/schemes/storagerelay",
+      "oauth2/parameters",
+      "oauth2/grants/permission",
+      "oauth2/schemes/storagerelay",
       "oauth2/authorize/http/response/modes/iframerpc",
       "iframe/http/service",
       "rpc/http/service"
