--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
       "oauth2/grants/permission",
       "oauth2/schemes/storagerelay",
       "oauth2/authorize/http/response/modes/iframerpc",
-      "iframe/http/service",
+      "iframe/service",
       "rpc/http/service"
     ],
     "x_components": [
