--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
       "oauth2/schemes/storagerelay",
       "oauth2/authorize/http/response/modes/iframerpc",
       "iframe/service",
-      "rpc/http/service"
+      "rpc/service"
     ],
     "x_components": [
       "http/iframe",
