WIP: use immediate mode response.

--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
       "oauth2/schemes/storagerelay",
       "oauth2/authorize/http/response/modes/iframerpc",
       "iframe/service",
-      "rpc/service"
+      "rpc/service",
+      "rpc/oauth2/parameters"
     ],
     "x_components": [
       "http/iframe",
