Add aaatrio dependency.

--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "com": "com"
   },
   "dependencies": {
+    "aaatrio": "0.0.2",
     "array-flatten": "^1.1.1",
     "express": "^4.17.1",
     "oauth2orize": "^1.11.1"
